feat: added friendships page, sending request
